[gd_scene load_steps=13 format=4 uid="uid://cspnda1la67v7"]

[ext_resource type="Script" path="res://Scenes/boss_map_config.gd" id="1_d41y4"]
[ext_resource type="TileSet" uid="uid://cnxvmlfdc2sot" path="res://Terrain/main_tile_set.tres" id="2_3heua"]
[ext_resource type="Shader" path="res://Terrain/spawn_area.gdshader" id="3_bvmqq"]
[ext_resource type="Texture2D" uid="uid://kpr3qpyrb52p" path="res://Terrain/spawn_orb.png" id="4_csg7h"]
[ext_resource type="PackedScene" uid="uid://cdwwulhmnc4im" path="res://Group/group.tscn" id="5_10fek"]
[ext_resource type="PackedScene" uid="uid://cwcaj1r1rxslj" path="res://Characters/god.tscn" id="6_m26ea"]
[ext_resource type="PackedScene" uid="uid://4n5wc8o887ei" path="res://UI/in_game_ui.tscn" id="7_orxrn"]
[ext_resource type="PackedScene" uid="uid://udufj0ob006w" path="res://UI/win_lose_ui.tscn" id="8_eyr15"]
[ext_resource type="AudioStream" uid="uid://dnc85ejak7ceb" path="res://External/Sounds/horror-death-ambiance-1.wav" id="9_yqka3"]
[ext_resource type="PackedScene" uid="uid://c1b2gdhh53yjy" path="res://Shaders/fire_effect.tscn" id="10_iocmf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_65o37"]
radius = 72.0
height = 288.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s4aky"]
shader = ExtResource("3_bvmqq")
shader_parameter/highlight_color = Color(1, 1, 1, 1)
shader_parameter/frequency = 0.35
shader_parameter/highlight_speed = 6.0
shader_parameter/highlight_width = 15.0

[node name="LevelBoss" type="Node2D"]
script = ExtResource("1_d41y4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(49, 15.435)
zoom = Vector2(1.8, 1.8)

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAsAAAAVAAMAAAD2/wEAAAAUAAEAAAD3/wIAAAAVAAMAAAD6/wUAAAAVAAMAAAD7/wYAAAAVAAMAAAD8/wcAAAAVAAMAAAD9/wgAAAAVAAMAAAD+/wkAAAAVAAMAAAD//woAAAAVAAMAAAAGAAsAAAAUAAMAAAAHAAoAAAAUAAMAAAAMAAUAAAAUAAMAAAAOAAMAAAAUAAMAAAANAAQAAAAUAAMAAAALAAYAAAAUAAMAAAAKAAcAAAAUAAMAAAAJAAgAAAAUAAMAAAAIAAkAAAAUAAMAAAAFAAwAAAAUAAMAAAAEAA0AAAAUAAMAAAACAA0AAAAVAAMAAAABAAwAAAAVAAMAAAD4/wMAAAAVAAMAAAD5/wQAAAAVAAMAAAADAA4AAAATAAAAAAAPAAIAAAAUAAMAAAAQAAEAAAASAAEAAAAQAAAAAAASAAEAAAAPAP//AAAUAAQAAAAOAP7/AAAUAAQAAAANAP3/AAAUAAQAAAAMAPz/AAAUAAQAAAALAPv/AAAUAAQAAAAKAPr/AAAUAAQAAAAJAPn/AAAUAAQAAAAIAPj/AAAUAAQAAAAHAPf/AAAUAAQAAAAGAPb/AAAUAAQAAAAFAPX/AAAUAAQAAAAEAPT/AAAUAAQAAAADAPP/AAATAAIAAAD2/wAAAAAUAAEAAAD3////AAAVAAQAAAD4//7/AAAVAAQAAAD5//3/AAAVAAQAAAD6//z/AAAVAAQAAAD7//v/AAAVAAQAAAD8//r/AAAVAAQAAAD9//n/AAAVAAQAAAD+//j/AAAVAAQAAAD///f/AAAVAAQAAAAAAPb/AAAVAAQAAAABAPX/AAAVAAQAAAACAPT/AAAVAAQAAAABAPr/AAAdAAIAAFACAPn/AAAdAAIAAFADAPj/AAAdAAIAAFAFAPj/AAAdAAIAAFAGAPn/AAAdAAIAAFAGAPr/AAAdAAIAAFAEAPf/AAAdAAIAAFAFAPf/AAAdAAIAAFD///n/AAALAAEAAAD+//r/AAALAAEAAAD9//v/AAALAAEAAAD8//3/AAALAAEAAAD8//v/AAALAAEAAAD8//z/AAALAAEAAAD8//7/AAALAAEAAAD8////AAALAAEAAAD8/wAAAAALAAEAAAD8/wEAAAALAAEAAAD8/wIAAAALAAEAAAD8/wMAAAALAAEAAAD8/wQAAAALAAEAAAD8/wUAAAALAAEAAAD8/wYAAAALAAEAAAD9//z/AAALAAEAAAD9//3/AAALAAEAAAD9//7/AAALAAEAAAD9////AAALAAEAAAD9/wAAAAALAAEAAAD9/wEAAAALAAEAAAD9/wIAAAALAAEAAAD9/wMAAAALAAEAAAD9/wQAAAALAAEAAAD9/wUAAAALAAEAAAD9/wYAAAALAAEAAAD+//v/AAALAAEAAAD+//z/AAALAAEAAAD+//3/AAALAAEAAAD+//7/AAALAAEAAAD+////AAALAAEAAAD+/wAAAAALAAEAAAD+/wEAAAALAAEAAAD+/wIAAAALAAEAAAD+/wMAAAALAAEAAAD+/wQAAAALAAEAAAD+/wUAAAALAAEAAAD+/wYAAAALAAEAAAD///v/AAALAAEAAAD///z/AAALAAEAAAD///3/AAALAAEAAAD///7/AAALAAEAAAD/////AAALAAEAAAD//wAAAAALAAEAAAD//wEAAAALAAEAAAD//wIAAAALAAEAAAD//wMAAAALAAEAAAD//wQAAAALAAEAAAD//wUAAAALAAEAAAD//wYAAAALAAEAAAAAAPv/AAALAAEAAAAAAPz/AAALAAEAAAAAAP3/AAALAAEAAAAAAP7/AAALAAEAAAAAAP//AAALAAEAAAAAAAAAAAALAAEAAAAAAAEAAAALAAEAAAAAAAIAAAALAAEAAAAAAAMAAAALAAEAAAAAAAQAAAALAAEAAAAAAAUAAAALAAEAAAAAAAYAAAALAAEAAAABAPv/AAALAAEAAAABAPz/AAALAAEAAAABAP3/AAALAAEAAAABAP7/AAALAAEAAAABAP//AAALAAEAAAABAAAAAAALAAEAAAABAAEAAAALAAEAAAABAAIAAAALAAEAAAABAAMAAAALAAEAAAABAAQAAAALAAEAAAABAAUAAAALAAEAAAABAAYAAAALAAEAAAACAPv/AAALAAEAAAACAPz/AAALAAEAAAACAP3/AAALAAEAAAACAP7/AAALAAEAAAACAP//AAALAAEAAAACAAAAAAALAAEAAAACAAEAAAALAAEAAAACAAIAAAALAAEAAAACAAMAAAALAAEAAAACAAQAAAALAAEAAAACAAUAAAALAAEAAAACAAYAAAALAAEAAAADAPv/AAALAAEAAAADAPz/AAALAAEAAAADAP3/AAALAAEAAAADAP7/AAALAAEAAAADAP//AAALAAEAAAADAAAAAAALAAEAAAADAAEAAAALAAEAAAADAAIAAAALAAEAAAADAAMAAAALAAEAAAADAAQAAAALAAEAAAADAAUAAAALAAEAAAADAAYAAAALAAEAAAAEAPv/AAALAAEAAAAEAPz/AAALAAEAAAAEAP3/AAALAAEAAAAEAP7/AAALAAEAAAAEAP//AAALAAEAAAAEAAAAAAALAAEAAAAEAAEAAAALAAEAAAAEAAIAAAALAAEAAAAEAAMAAAALAAEAAAAEAAQAAAALAAEAAAAEAAUAAAALAAEAAAAEAAYAAAALAAEAAAAFAPv/AAALAAEAAAAFAPz/AAALAAEAAAAFAP3/AAALAAEAAAAFAP7/AAALAAEAAAAFAP//AAALAAEAAAAFAAAAAAALAAEAAAAFAAIAAAALAAEAAAAFAAMAAAALAAEAAAAFAAQAAAALAAEAAAAFAAUAAAALAAEAAAAFAAYAAAALAAEAAAAGAPv/AAALAAEAAAAGAPz/AAALAAEAAAAGAP3/AAALAAEAAAAGAP7/AAALAAEAAAAGAP//AAALAAEAAAAGAAAAAAALAAEAAAAGAAEAAAALAAEAAAAGAAIAAAALAAEAAAAGAAMAAAALAAEAAAAGAAQAAAALAAEAAAAGAAUAAAALAAEAAAAGAAYAAAALAAEAAAAHAPv/AAALAAEAAAAHAPz/AAALAAEAAAAHAP3/AAALAAEAAAAHAP7/AAALAAEAAAAHAP//AAALAAEAAAAHAAAAAAALAAEAAAAHAAEAAAALAAEAAAAHAAIAAAALAAEAAAAHAAMAAAALAAEAAAAHAAQAAAALAAEAAAAHAAUAAAALAAEAAAAHAAYAAAALAAEAAAAIAPv/AAALAAEAAAAIAPz/AAALAAEAAAAIAP3/AAALAAEAAAAIAP7/AAALAAEAAAAIAP//AAALAAEAAAAIAAAAAAALAAEAAAAIAAEAAAALAAEAAAAIAAIAAAALAAEAAAAIAAMAAAALAAEAAAAIAAQAAAALAAEAAAAIAAUAAAALAAEAAAAIAAYAAAALAAEAAAAJAPv/AAALAAEAAAAJAPz/AAALAAEAAAAJAP3/AAALAAEAAAAJAP7/AAALAAEAAAAJAP//AAALAAEAAAAJAAAAAAALAAEAAAAJAAEAAAALAAEAAAAJAAIAAAALAAEAAAAJAAMAAAALAAEAAAAJAAQAAAALAAEAAAAJAAUAAAALAAEAAAAJAAYAAAALAAEAAAAKAPv/AAALAAEAAAAKAPz/AAALAAEAAAAKAP3/AAALAAEAAAAKAP7/AAALAAEAAAAKAP//AAALAAEAAAAKAAAAAAALAAEAAAAKAAEAAAALAAEAAAAKAAIAAAALAAEAAAAKAAMAAAALAAEAAAAKAAQAAAALAAEAAAAKAAUAAAALAAEAAAAKAAYAAAALAAEAAAADAPX/AAALAAEAAAADAPb/AAALAAEAAAADAPf/AAALAAEAAAADAPn/AAALAAEAAAADAPr/AAALAAEAAAACAPX/AAALAAEAAAACAPb/AAALAAEAAAACAPf/AAALAAEAAAACAPj/AAALAAEAAAACAPr/AAALAAEAAAABAPb/AAALAAEAAAABAPf/AAALAAEAAAABAPj/AAALAAEAAAABAPn/AAALAAEAAAAAAPf/AAALAAEAAAAAAPj/AAALAAEAAAAAAPn/AAALAAEAAAAAAPr/AAALAAEAAAD///j/AAALAAEAAAD///r/AAALAAEAAAD+//n/AAALAAEAAAD9//r/AAALAAEAAAD7//z/AAALAAEAAAD7//3/AAALAAEAAAD7//7/AAALAAEAAAD7////AAALAAEAAAD7/wAAAAALAAEAAAD7/wEAAAALAAEAAAD7/wIAAAALAAEAAAD7/wMAAAALAAEAAAD7/wQAAAALAAEAAAD7/wUAAAALAAEAAAD6//3/AAALAAEAAAD6//7/AAALAAEAAAD6////AAALAAEAAAD6/wAAAAALAAEAAAD6/wEAAAALAAEAAAD6/wIAAAALAAEAAAD6/wMAAAALAAEAAAD6/wQAAAALAAEAAAD5//7/AAALAAEAAAD5////AAALAAEAAAD5/wAAAAALAAEAAAD5/wEAAAALAAEAAAD5/wIAAAALAAEAAAD5/wMAAAALAAEAAAD4////AAALAAEAAAD4/wAAAAALAAEAAAD4/wEAAAALAAEAAAD4/wIAAAALAAEAAAD3/wAAAAALAAEAAAD3/wEAAAALAAEAAAAPAAAAAAALAAEAAAAPAAEAAAALAAEAAAAOAP//AAALAAEAAAAOAAAAAAALAAEAAAAOAAEAAAALAAEAAAAOAAIAAAALAAEAAAANAP7/AAALAAEAAAANAP//AAALAAEAAAANAAAAAAALAAEAAAANAAEAAAALAAEAAAANAAIAAAALAAEAAAANAAMAAAALAAEAAAAMAP7/AAALAAEAAAAMAP3/AAALAAEAAAAMAP//AAALAAEAAAAMAAAAAAALAAEAAAAMAAEAAAALAAEAAAAMAAIAAAALAAEAAAAMAAMAAAALAAEAAAAMAAQAAAALAAEAAAALAPz/AAALAAEAAAALAP3/AAALAAEAAAALAP7/AAALAAEAAAALAP//AAALAAEAAAALAAAAAAALAAEAAAALAAEAAAALAAEAAAALAAIAAAALAAEAAAALAAMAAAALAAEAAAALAAQAAAALAAEAAAALAAUAAAALAAEAAAD9/wcAAAALAAEAAAD+/wcAAAALAAEAAAD//wcAAAALAAEAAAAAAAcAAAALAAEAAAABAAcAAAALAAEAAAACAAcAAAALAAEAAAADAAcAAAALAAEAAAAEAAcAAAALAAEAAAAFAAcAAAALAAEAAAAGAAcAAAALAAEAAAAHAAcAAAALAAEAAAAIAAcAAAALAAEAAAAJAAcAAAALAAEAAAD+/wgAAAALAAEAAAD//wgAAAALAAEAAAAAAAgAAAALAAEAAAABAAgAAAALAAEAAAACAAgAAAALAAEAAAADAAgAAAALAAEAAAAEAAgAAAALAAEAAAAFAAgAAAALAAEAAAAGAAgAAAALAAEAAAAHAAgAAAALAAEAAAAIAAgAAAALAAEAAAAAAAkAAAALAAEAAAAAAAoAAAALAAEAAAABAAkAAAALAAEAAAABAAoAAAALAAEAAAACAAkAAAALAAEAAAACAAoAAAALAAEAAAADAAkAAAALAAEAAAADAAoAAAALAAEAAAAEAAkAAAALAAEAAAAEAAoAAAALAAEAAAAFAAkAAAALAAEAAAAFAAoAAAALAAEAAAAGAAkAAAALAAEAAAAGAAoAAAALAAEAAAAHAAkAAAALAAEAAAD//wkAAAALAAEAAAABAAsAAAALAAEAAAACAAsAAAALAAEAAAADAAsAAAALAAEAAAAEAAsAAAALAAEAAAAFAAsAAAALAAEAAAACAAwAAAALAAEAAAADAAwAAAALAAEAAAAEAAwAAAALAAEAAAADAA0AAAALAAEAAAADAPT/AAALAAEAAAAEAPX/AAALAAEAAAAEAPb/AAALAAEAAAAEAPj/AAALAAEAAAAEAPn/AAALAAEAAAAFAPn/AAALAAEAAAAFAPr/AAALAAEAAAAGAPj/AAALAAEAAAAGAPf/AAALAAEAAAAFAPb/AAALAAEAAAAHAPj/AAALAAEAAAAHAPn/AAALAAEAAAAHAPr/AAALAAEAAAAIAPr/AAALAAEAAAAIAPn/AAALAAEAAAAJAPr/AAALAAEAAAAFAAEAAAALAAEAAAAEAPr/AAALAAEAAAA=")
tile_set = ExtResource("2_3heua")

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2(57.77, 46.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_65o37")

[node name="SpawnOrb" type="Sprite2D" parent="SpawnArea"]
material = SubResource("ShaderMaterial_s4aky")
position = Vector2(13.73, 1.60001)
scale = Vector2(2.90152, 1.51587)
texture = ExtResource("4_csg7h")

[node name="Korpus" parent="." instance=ExtResource("5_10fek")]
position = Vector2(34, -37)

[node name="InGameUI" parent="." node_paths=PackedStringArray("korpus", "enemies", "spawn_area") instance=ExtResource("7_orxrn")]
korpus = NodePath("../Korpus")
enemies = NodePath("../Enemies")
spawn_area = NodePath("../SpawnArea")

[node name="Win-LoseUI" parent="." node_paths=PackedStringArray("korpus", "enemies", "in_game_ui") instance=ExtResource("8_eyr15")]
visible = false
korpus = NodePath("../Korpus")
enemies = NodePath("../Enemies")
in_game_ui = NodePath("../InGameUI")
next_level_name = "the_end"

[node name="GodSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_yqka3")
autoplay = true

[node name="FireEffects" type="Node" parent="."]

[node name="FireEffect5" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(88, -138)
scale = Vector2(1.2, 1.1)

[node name="FireEffect4" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(72, -139)
scale = Vector2(1.2, 1.1)

[node name="FireEffect3" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(56, -123)
scale = Vector2(1.2, 1.1)

[node name="FireEffect" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(23, -91)
scale = Vector2(1.2, 1.1)

[node name="FireEffect2" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(40, -106)
scale = Vector2(1.2, 1.1)

[node name="FireEffect6" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(88, -122)
scale = Vector2(1.2, 1.1)

[node name="FireEffect7" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(104, -106)
scale = Vector2(1.2, 1.1)

[node name="FireEffect8" parent="FireEffects" instance=ExtResource("10_iocmf")]
position = Vector2(104, -91)
scale = Vector2(1.2, 1.1)

[node name="Enemies" parent="." instance=ExtResource("5_10fek")]
position = Vector2(12, -109)
group_type = 1

[node name="God" parent="Enemies" node_paths=PackedStringArray("target_group") instance=ExtResource("6_m26ea")]
position = Vector2(58, -16)
target_group = NodePath("../../Korpus")

[connection signal="mouse_entered" from="SpawnArea" to="InGameUI" method="_on_spawn_area_mouse_entered"]
[connection signal="mouse_exited" from="SpawnArea" to="InGameUI" method="_on_spawn_area_mouse_exited"]
[connection signal="battle_ended" from="Win-LoseUI" to="." method="_on_win_lose_ui_battle_ended"]
